@@ -38,6 +38,8 @@
     race conditions.
 16. If fading volume on stop, then reset volume just before stopping. Some
     outputs (e.g. pulse audio) only allow setting a volume whilst playing.
+17. If 'url' entry is empty in 'enclusure' section of podcast RSS file, then
+    use 'guid' text as url - if possible.
 
 1.5.1
 -----
